--- a/project.config.json
+++ b/project.config.json
@@ -9,6 +9,8 @@
   "compileType": "miniprogram",
   "projectname": "mbti-test",
   "setting": {
+    "bundle": false,
+    "userConfirmedBundleSwitch": false,
     "urlCheck": true,
     "es6": true,
     "enhance": true,
@@ -35,7 +37,8 @@
       "disablePlugins": [],
       "outputPath": ""
     },
-    "ignoreUploadUnusedFiles": true
+    "ignoreUploadUnusedFiles": true,
+    "es5": true
   },
   "appid": "wxcf7699c399707cbe",
   "libVersion": "2.30.2",
